--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "auto-forward",
       "send"
     ],
-    "repository": "https://po123772000/telegram-forwarder_auto",
+    "repository": "https://github.com/po123772000/telegram-forwarder_auto",
     "env": {
         "APP_ID": {
             "description": "Your API_ID from https://my.telegram.org/apps"
